Added script installers for ownCloud 5.0.7 and X2CRM 3.0.2.
German translation updates, thanks to Raymond Vetter.
The default external IP address (for use in DNS records) can now be specified on a per-reseller basis.
Added the Amazon S3 Buckets page, for setting bucket ACLs, scheduled deletion and Glacier move rules.
Added an option when restoring virtual servers to have them deleted and re-created before restoring files.
When changing the IP address of multiple domains, an option to update the master IP of slave DNS zones is now available.
For domains whose DNS is not hosted by the Virtualmin system, a sensible default set of records is shown on the Suggested DNS Records page.
---- Changes since 4.01 ----
Updated the Roundcube script installer to version 0.9.2, DokuWiki to 2013-05-10a, X2CRM to 3.2, WordPress to 3.6, Movable Type to 5.2.7, TikiWiki to 11.0 and 6.12, AjaXplorer to 5.0.2, phpMyFAQ to 2.8.2, SugarCRM to 6.5.14, ZenPhoto to 1.4.5.1, Gallery to 3.0.9, Moodle to 2.5.1, ownCloud to 5.0.9, FengOffice to 2.3.1.1, dotProject to 2.1.8, Joomla to 3.1.5 and 2.5.14, Dolibarr to 3.4.0, Drupal to 7.23, OpenX to 2.8.11, and phpMyAdmin to 4.0.5 and 3.5.8.2.
On Apache version 2.4 and above, Virtualmin no longer adds the NameVirtualHost directive as it is deprecated.
The Change IP Address page can now be used to switch a domain with a private IP to another address.
---- Changes since 4.02 ----
Updated the SMF script installer to version 2.0.5, X2CRM to 3.5.1, Django to 1.5.3 and 1.4.7, Roundcube to 0.9.4, osCommerce to 2.3.3.2, SugarCRM to 6.5.15, Z-push to 2.0.8, AjaXplorer to 5.0.3, MediaWiki to 1.12.2 and 1.19.8, phpMyAdmin to 4.0.6, Moodle to 2.5.2, ZenPhoto to 1.4.5.2, CMS Made Simple to 1.11.8, Wordpress to 3.6.1, and ownCloud to 5.0.11.
Mail client auto-configuration now supports Outlook as well as Thunderbird.